crates/nash-report/tests/parse/snapshots/parse__tests_block__block_must_end_in_expression.snap
---
source: crates/nash-report/tests/parse/tests_block.rs
assertion_line: 106
description: "Code:\n\nmodule Main exposing (..)\n\ntests\n    test \"t\" = do\n        x <- e\n"
info: diagnostic
---
nash::syntax

  × A do block must end with an expression.
   ╭─[src/Main.nash:5:9]
 4 │     test "t" = do
 5 │         x <- e
   ·         ─
   ╰────
  help: Add a final expression after this binding.
