crates/nash-report/tests/parse/snapshots/parse__tests_block__body_requires_do.snap
---
source: crates/nash-report/tests/parse/tests_block.rs
assertion_line: 5
description: "Code:\n\nmodule Main exposing (..)\n\ntests\n    test \"t\" =\n        assert True\n"
info: diagnostic
---
nash::syntax

  × Expected a do block for the test body.
   ╭─[src/Main.nash:5:9]
 3 │ tests
 4 │     test "t" =
 5 │         assert True
   ·         ─
   ╰────
  help: Write `do` and indent its statements.
