crates/nash-report/tests/parse/snapshots/parse__tests_block__budget_kinds_cannot_repeat.snap
---
source: crates/nash-report/tests/parse/tests_block.rs
assertion_line: 119
description: "Code:\n\nmodule Main exposing (..)\n\ntests\n    test \"t\" within (cpu 1, cpu 2) = do\n        assert True\n"
info: diagnostic
---
nash::syntax

  × Budget kind is specified more than once.
   ╭─[src/Main.nash:4:29]
 3 │ tests
 4 │     test "t" within (cpu 1, cpu 2) = do
   ·                             ─
 5 │         assert True
   ╰────
  help: Keep one limit for each budget kind.
