crates/nash-report/tests/parse/snapshots/parse__tests_block__items_must_align.snap
---
source: crates/nash-report/tests/parse/tests_block.rs
assertion_line: 132
description: "Code:\n\nmodule Main exposing (..)\n\ntests\n    test \"first\" = do\n        assert True\n     test \"second\" = do\n         assert True\n"
info: diagnostic
---
nash::syntax

  × Do statements must align.
   ╭─[src/Main.nash:6:6]
 4 │     test "first" = do
 5 │         assert True
 6 │      test "second" = do
   ·      ─
 7 │          assert True
   ╰────
  help: Indent the statement with 9 spaces.
