crates/nash-report/tests/parse/snapshots/parse__tests_block__once_is_invalid_on_unit_test.snap
---
source: crates/nash-report/tests/parse/tests_block.rs
assertion_line: 93
description: "Code:\n\nmodule Main exposing (..)\n\ntests\n    test \"t\" fail once = do\n        assert True\n"
info: diagnostic
---
nash::syntax

  × Unit tests already run once.
   ╭─[src/Main.nash:4:19]
 3 │ tests
 4 │     test "t" fail once = do
   ·                   ─
 5 │         assert True
   ╰────
  help: Remove `once`, or use a property declaration for generated inputs.
