crates/nash-report/tests/parse/snapshots/parse__tests_block__property_binder_requires_via.snap
---
source: crates/nash-report/tests/parse/tests_block.rs
assertion_line: 55
description: "Code:\n\nmodule Main exposing (..)\n\ntests\n    prop \"p\" = let x = int in x\n"
info: diagnostic
---
nash::syntax

  × Expected `via` after the input pattern.
   ╭─[src/Main.nash:4:22]
 3 │ tests
 4 │     prop "p" = let x = int in x
   ·                      ─
   ╰────
  help: Add `via` followed by the fuzzer expression.
