crates/nash-report/tests/parse/snapshots/parse__tests_block__property_requires_at_least_one_binder.snap
---
source: crates/nash-report/tests/parse/tests_block.rs
assertion_line: 80
description: "Code:\n\nmodule Main exposing (..)\n\ntests\n    prop \"p\" = let in do\n        assert True\n"
info: diagnostic
---
nash::syntax

  × Reserved word `in` cannot be a pattern variable.
   ╭─[src/Main.nash:4:20]
 3 │ tests
 4 │     prop "p" = let in do
   ·                    ──
 5 │         assert True
   ╰────
  help: Choose another name.
