crates/nash-report/tests/parse/snapshots/parse__tests_block__property_requires_let.snap
---
source: crates/nash-report/tests/parse/tests_block.rs
assertion_line: 43
description: "Code:\n\nmodule Main exposing (..)\n\ntests\n    prop \"p\" = assert True\n"
info: diagnostic
---
nash::syntax

  × Expected generated inputs for the property.
   ╭─[src/Main.nash:4:16]
 3 │ tests
 4 │     prop "p" = assert True
   ·                ─
   ╰────
  help: Write `let pattern via fuzzer` before `in`.
