crates/nash-report/tests/parse/snapshots/parse__tests_block__tests_block_must_be_last.snap
---
source: crates/nash-report/tests/parse/tests_block.rs
assertion_line: 18
description: "Code:\n\nmodule Main exposing (..)\n\ntests\nx = 1\n"
info: diagnostic
---
nash::syntax

  × Expected a declaration.
   ╭─[src/Main.nash:4:1]
 3 │ tests
 4 │ x = 1
   · ─
   ╰────
  help: Start a named definition here, or indent this line to continue the preceding
        definition.
